# lab_CICD

my-lab-repository-main/: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md
my-lab-repository-main/lint/: lint_code_syntax.py  lint_copyright.py
my-lab-repository-main/scr/: infix_calculator.cpp  infix_calculator.h  infix_calculator_gui.cpp  infix_calculator_gui.h  linked_list.h  main.cpp  postfix_calculator.cpp  postfix_calculator.h  queue.h  stack.h
my-lab-repository-main/tests/: test_calculator.cpp  test_use_case.cpp
